--- a/static/app/index.html
+++ b/static/app/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Find My Device</title>
     <meta name="viewport" content="width=device-width">
+    <meta name="token" content="{{.Token}}">
     <link href="https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.css" rel="stylesheet">
     <!-- build:css(.tmp) styles/main.css -->
       <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
